Added Apache Commons IO dependency